# kermes

./: .clippy.toml  Anchor.toml  README.md  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/actions/anchor/: action.yml
.github/actions/node/: action.yml
.github/actions/yarn/: action.yml
.github/workflows/: build.yml  checks.yml  clippy.yml  format.yml  security-audit.yml  test.yml  tests.yml
programs/kermes/: Cargo.toml
programs/kermes/src/: lib.rs
programs/kermes/src/events/: mod.rs
programs/kermes/src/instructions/: initialize_vault.rs  mod.rs  stake.rs
programs/kermes/src/state/: mod.rs  spl_token_metadata.rs
programs/kermes/src/token_ops/: mod.rs
programs/kermes_staking/: Cargo.toml
programs/kermes_staking/src/: lib.rs
programs/kermes_staking/src/errors/: mod.rs
programs/kermes_staking/src/events/: mod.rs
programs/kermes_staking/src/instructions/: stake.rs
programs/kermes_staking/src/state/: vault.rs
programs/kermes_staking/src/token_ops/: mod.rs
programs/kermes_vault_share/: Cargo.toml
programs/kermes_vault_share/src/: lib.rs
programs/kermes_vault_share/src/errors/: mod.rs
programs/kermes_vault_share/src/events/: mod.rs
programs/kermes_vault_share/src/instructions/: initialize.rs  mint.rs  mod.rs
tests/: helpers.ts  kermes.ts  stake.ts  stake_2022.ts
tests/kermes_staking/: initialize_vault.ts  stake.ts
tests/programs/kermes_staking/: initialize_vault.ts  stake.ts
tests/programs/kermes_vault_share/: mint.ts
