[package]
name = "kermes_vault_share"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kermes_vault_share"

[features]
default = []
test = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["event-cpi"] }
anchor-spl = "0.30.1"
anchor-derive-accounts = "0.30.1"
kermes_staking = { path = "../kermes_staking", features = ["cpi"] }
